--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="canvas.css">
+  </head>
+  <body>
 <canvas id="myCanvas" width="480" height="320"></canvas>
+ <script src="game.js" charset="utf-8"></script>
+  </body>
+</html>
